--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
+    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/core": "^9.4.3",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
@@ -32,6 +33,7 @@
     "class-validator": "^0.14.0",
     "minio": "^7.1.3",
     "mongoose": "^7.6.3",
+    "nodemailer": "^6.10.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "uuid": "^9.0.1"
